--- a/eug-server/.classpath
+++ b/eug-server/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/eug-shared"/>
-	<classpathentry kind="lib" path="/eug-shared/lib/kryonet-2.21/kryonet-2.21-all.jar">
+	<classpathentry kind="lib" path="/eug-shared/lib/kryonet-2.21/kryonet-2.21-all.jar" sourcepath="/eug-shared/lib/kryonet-2.21/src">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/C:/Users/i55645/Documents/disk/eug-shared/lib/kryonet-2.21/javadoc/"/>
 		</attributes>
