--- a/eug-shared/.classpath
+++ b/eug-shared/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="lib/kryonet-2.21/kryonet-2.21-all.jar">
+	<classpathentry kind="lib" path="lib/kryonet-2.21/kryonet-2.21-all.jar" sourcepath="lib/kryonet-2.21/src">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/C:/Users/i55645/Documents/disk/eug-shared/lib/kryonet-2.21/javadoc/"/>
 		</attributes>
