--- a/testbed-server/.classpath
+++ b/testbed-server/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/eug-server"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/eug-shared"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/testbed-shared"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
