--- a/testbed-shared/.classpath
+++ b/testbed-shared/.classpath
@@ -10,5 +10,6 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="testbed-shared/lib/lwjgl/native/windows/x64"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/slick-util.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
